# Aura---Game

./: 01_LOUVRE.md  02_ST_PETERS.md  03_TOPKAPI.md  04_FORBIDDEN_CITY.md  05_TSMC.md  06_HERMITAGE.md  07_FEDERAL_RESERVE.md  08_MOMA.md  09_BORGES_LIBRARY.md  BORGES_LIBRARY.md  BORGES_LIBRARY_BOOKS.md  CLAUDE.md  CRITICS_REVIEWS.md  CRITIC_VOICE.md  DESKTOP_BETA_PLAN.md  DEVLOG.md  EASTER_EGGS.md  EASTER_EGG_DESIGN.md  FRONTEND_DESIGN.md  GAME_DESIGN_DOCUMENT.md  NOTES.md  PROGRESS.md  PROJECT_CONTEXT.md  README.md  SCENARIO_DESIGN.md  SKILL.md  TECHNICAL_SYSTEMS.md  THREE_JS_GAME.md  WEB_BUILD.md  bundle-artifact.sh  progress.md  todo.md
.github/workflows/: ci.yml  release-desktop.yml
aura-game/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.core.json
aura-game/docs/: ux-goals.md
aura-game/scripts/: agent-loop-harness.mjs  check-desktop-release-scripts.mjs  check-offline-assets.mjs  check-release-tag.mjs  check-scenario-integrity.mjs  smoke-packaged-mode.mjs  stage-release-artifacts.sh  validate-release-artifacts.mjs
aura-game/src/: App.css  App.tsx  index.css  main.tsx
aura-game/src-tauri/: Cargo.toml  tauri.conf.json
aura-game/src-tauri/src/: main.rs
aura-game/tests/: ballistics-simulation.test.ts  ballistics-value-mesh.test.ts  loader.mjs  loader.test.ts  mobile-layout.test.ts  register-loader.mjs  runState.test.ts  ui-copy.test.ts  (+5 more)
docs/: AGENT_TASK.md  QA_PLAYBOOK.md  agentic-loop-harness.md  asset-acceptance-checklist.md  desktop-release.md  release-runbook.md  scenario-definition-of-done.md  value-mesh.md
release/: README.md
(+61 files in other folders)
