[package]
name = "aura-game-desktop"
version = "0.1.0"
description = "Aura Game desktop beta wrapper"
authors = ["Aura Team"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
